--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
     "d3-format": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
+    "react-social-login-buttons": "^3.6.1",
     "react-vis": "^1.11.7",
+    "reactjs-social-login": "^2.6.1",
     "shards-react": "^1.0.3",
     "superagent": "^8.0.2",
     "web-vitals": "^1.1.2"
