--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,18 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0",
     "mysql": "^2.18.1",
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
+    "passport": "^0.6.0",
+    "reactjs-social-login": "^2.6.1",
     "supertest": "^6.1.6"
   },
   "devDependencies": {
