--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.16.13",
     "d3-format": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "mongodb": "^4.12.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
