--- a/client/package.json
+++ b/client/package.json
@@ -47,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@cypress/code-coverage": "^3.10.0",
+    "cypress": "^12.1.0"
   }
 }
